[gd_scene load_steps=4 format=3 uid="uid://bafwe8clvmb2f"]

[ext_resource type="PackedScene" uid="uid://c7pggom3bb7tm" path="res://src/scenes/Components/ZoomableImage.tscn" id="1_zoomable_image"]
[ext_resource type="Script" path="res://src/scripts/Lesson/ZoomableImageDemo.gd" id="2_demo_script"]
[ext_resource type="Texture2D" uid="uid://5sx54bp338g5" path="res://assets/images/Lesson/Fingerpint_Sample_1.jpg" id="3_fingerprint"]

[node name="ZoomableImageDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_demo_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Zoomable Image Component Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ZoomableImage1" parent="GridContainer" instance=ExtResource("1_zoomable_image")]
layout_mode = 2
image_texture = ExtResource("3_fingerprint")
label_text = "Fingerprint Sample 1"

[node name="ZoomableImage2" parent="GridContainer" instance=ExtResource("1_zoomable_image")]
layout_mode = 2
image_texture = ExtResource("3_fingerprint")
image_size = Vector2(300, 200)
label_text = "Fingerprint Sample 2"

[node name="ZoomableImage3" parent="GridContainer" instance=ExtResource("1_zoomable_image")]
layout_mode = 2
image_texture = ExtResource("3_fingerprint")
image_size = Vector2(350, 250)
label_text = "Evidence Photo 1"

[node name="ZoomableImage4" parent="GridContainer" instance=ExtResource("1_zoomable_image")]
layout_mode = 2
image_texture = ExtResource("3_fingerprint")
image_size = Vector2(250, 180)
label_text = "Analysis Reference"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
text = "‚Üê Back to Menu"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
